--- a/public/Cake Recipe.html
+++ b/public/Cake Recipe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Angela's Cinnamon Roll Recipe</title>
+    <title>William's Cinnamon Roll Recipe</title>
     <style>
         body {
             margin: 0;
